argocd/base/ingress/cross-namespace-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  type: ExternalName
  externalName: hello-world.demo.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cost-dashboard
  namespace: default
spec:
  type: ExternalName
  externalName: cost-dashboard.cost-monitoring.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus.monitoring.svc.cluster.local
  ports:
  - port: 9090
    targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
  ports:
  - port: 3000
    targetPort: 3000
